[project]
name = "audx"
version = "0.1.2"
description = "Convert your audio files between different formats easily."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "typer>=0.21.1",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=26.1.0",
    "isort>=7.0.0",
]

[tool.isort]
profile = "black"

[project.scripts]
audx = "audx.main:app"
test = "tests.test_cli:test"
